update logic authentication for admin layout